// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test on file GifFinderApp should show <GifFinderApp /> correctly 1`] = `
<Fragment>
  <h2>
    GifFinderApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Test on file GifFinderApp should show a category list 1`] = `
<Fragment>
  <h2>
    GifFinderApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Hinata"
      key="Hinata"
    />
    <GifGrid
      category="Chitanda"
      key="Chitanda"
    />
  </ol>
</Fragment>
`;
